--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +16,9 @@
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
+	<title>Nina Carducci</title>
+
+
 </head>
 
 <body>
@@ -78,11 +81,15 @@
 			<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 				prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
 				immortels, voilà ce qui me fait vibrer.</h6>
-			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le
-				figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux,
+			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
+				le
+				figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
+				yeux,
 				ou le partager au plus grand nombre.
-				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma
-				technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la
+				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
+				approche, ma
+				technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de
+				la
 				tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 		</div>
 	</div>
@@ -115,7 +122,8 @@
 				<blockquote>
 					<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
 						fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
-						n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
+						n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
+						vérité.
 					</h1>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
@@ -128,7 +136,8 @@
 			<div class="service">
 				<div class="service__description">
 					<h3>Shooting photo</h3>
-					<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en
+					<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
+						en
 						Île-de-France pour réaliser vos photos</p>
 				</div>
 				<div class="service__price">
@@ -151,7 +160,8 @@
 			<div class="service">
 				<div class="service__description">
 					<h3>Album photos</h3>
-					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un
+					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
+						un
 						album photo personnalisé</p>
 				</div>
 				<div class="service__price">
