--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.jpg">
+			<img src="./assets/images/nina.jpg" alt="Nina Carducci">
 		</div>
 		<div id="about-me">
 			<h3 class="about-me__title">A propos de moi</h3>
