--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,16 +50,13 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
-						alt="...">
+					<img src="./assets/images/slider/ryoji-iwata.jpg" class="d-block w-100" alt="ryoji-iwata">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
-						alt="...">
+					<img src="./assets/images/slider/nicholas-green.jpg" class="d-block w-100" alt="nicholas-green">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
-						alt="...">
+					<img src="./assets/images/slider/edward-cisneros.jpg" class="d-block w-100" alt="edward-cisneros">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -100,23 +97,23 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" />
+					src="./assets/images/gallery/concerts/aaron-paul.jpg" alt="aaron-paul">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" />
+					src="./assets/images/gallery/entreprise/ali-morshedlou.jpg" alt="ali-morshedlou">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" />
+					src="./assets/images/gallery/entreprise/jason-goodman.jpg" alt="jason-goodman">
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" />
+					src="./assets/images/gallery/mariage/hannah-busing.jpg" alt="hannah-busing">
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" />
+					src="./assets/images/gallery/portraits/ade-tunji.jpg" alt="ade-tunji">
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" />
+					src="./assets/images/gallery/mariage/jakob-owens.jpg" alt="jakob-owens">
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" />
+					src="./assets/images/gallery/portraits/nino-van-prattenburg.jpg" alt="nino-van-prattenburg">
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" />
+					src="./assets/images/gallery/concerts/austin-neill.jpg" alt="austin-neill">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" />
+					src="./assets/images/gallery/entreprise/mateus-campos-felipe.jpg" alt="mateus-campos-felipe">
 			</div>
 		</div>
 		<div class="quote">
@@ -187,18 +184,18 @@
 			<div class="form-container">
 				<h3>Une question ? Une demande de devis ?</h3>
 				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-				<form action="" method="post">
+				<form method="post">
 					<label>Nom</label>
 					<input type="text" name="nom" id="nom">
 					<label>Email</label>
 					<input type="email" name="email" id="email">
 					<label>Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
-					<input type="submit" value="Envoyer" />
+					<input type="submit" value="Envoyer">
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.png">
+				<img src="./assets/images/camera.jpg" alt="camera">
 			</div>
 		</div>
 	</div>
