--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 	</div>
 	<div id="about">
-		<div class="picture left" style="background-color: red;">
+		<div>
 			<img src="./assets/images/nina.jpg" alt="Nina Carducci">
 		</div>
 		<div id="about-me">
