--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-	<title>Photographe Nina Carducci à Bordeaux</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
@@ -15,11 +14,16 @@
 	<link rel="stylesheet" href="./assets/css/style.css">
 
 
+	<title>Photographe Nina Carducci à Bordeaux</title>
+	<meta name="description"
+		content="Photographe professionnel a votre service, Adresse:68 avenue Alsace-Lorraine,33200 Bordeaux, Tel :05 56 67 78 89" />
+	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+
 </head>
 
 <body>
 	<div class="top-header">
-		<h3 class="name">Nina Carducci</h3>
+		<h1 class="name">Nina Carducci</h1>
 		<div class="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
@@ -70,10 +74,10 @@
 			<img src="./assets/images/nina.jpg" alt="Nina Carducci">
 		</div>
 		<div id="about-me">
-			<h3 class="about-me__title">A propos de moi</h3>
-			<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+			<h1 class="about-me__title">Photographe Nina Carducci</h1>
+			<h2 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 				prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-				immortels, voilà ce qui me fait vibrer.</h6>
+				immortels, voilà ce qui me fait vibrer.</h2>
 			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
 				le
 				figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
