--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<img src="./assets/images/nina.jpg" alt="Nina Carducci">
 		</div>
 		<div id="about-me">
-			<h1 class="about-me__title">Photographe Nina Carducci</h1>
+			<h1 class="about-me__title">La photographe Nina Carducci</h1>
 			<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 				prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
 				immortels, voilà ce qui me fait vibrer.</h2>
