--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 	<div class="top-header">
-		<h1 class="name">Nina Carducci</h1>
+		<h1 class="logo">Nina Carducci</h1>
 		<div class="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
