--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
@@ -17,31 +18,6 @@
 	<meta name="description"
 		content="Photographe professionnel a votre service, Adresse:68 avenue Alsace-Lorraine,33200 Bordeaux, Tel :05 56 67 78 89" />
 	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-
-
-	<!-- IF BROWSER DOESN'T SUPPORT JAVASCRIPT THEN USE NORMAL LINK TAGS TO LOAD CSS -->
-	<noscript>
-		<link rel="stylesheet" type="text/css"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" />
-	</noscript>
-
-	<!-- LOAD CSS -->
-	<script type="text/javascript">//<![CDATA[
-		(function () {
-			var css = document.createElement('link');
-			css.href = 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css';
-			css.rel = 'stylesheet';
-			css.type = 'text/css';
-			document.getElementsByTagName('head')[0].appendChild(css);
-		})();
-//]]></script>
-
-
-
-
-
-
-
 
 </head>
 
