--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 	<div class="top-header">
-		<h1 class="logo">Nina Carducci</h1>
+		<h1 class="name">Nina Carducci</h1>
 		<div class="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
@@ -199,7 +199,7 @@
 	</div>
 
 
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/js/maugallery.js"></script>
