--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
 		content="Photographe professionnel a votre service, Adresse:68 avenue Alsace-Lorraine,33200 Bordeaux, Tel :05 56 67 78 89" />
 	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -203,6 +199,8 @@
 	</div>
 
 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script src="./assets/js/maugallery.js"></script>
 	<script src="./assets/js/scripts.js"></script>
 
