--- a/index.html
+++ b/index.html
@@ -69,10 +69,15 @@
 		</div>
 		<div id="about-me">
 			<h3 class="about-me__title">À propos</h3>
-			<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
-				prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-				immortels, voilà ce qui me fait vibrer.</h6>
-			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
+
+			<p>
+
+				<strong> Devenir photographe était pour moi une évidence. Comme si j’y étais
+					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
+					immortels, voilà ce qui me fait vibrer.</strong> <br><br>
+
+
+				Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
 				le
 				figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
 				yeux,
@@ -81,7 +86,8 @@
 				approche, ma
 				technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de
 				la
-				tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+				tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.
+			</p>
 		</div>
 	</div>
 	<div id="gallery">
