--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<title>Photographe Nina Carducci à Bordeaux</title>
 	<meta name="description"
-		content="Photographe professionnel a votre service, Adresse:68 avenue Alsace-Lorraine,33200 Bordeaux, Tel :05 56 67 78 89" />
+		content="Photographe professionnel a votre service, Adresse:68 avenue Alsace-Lorraine,33200 Bordeaux,Tel :05 56 67 78 89, deplacement possible sur Île-de-France" />
 	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 </head>
 
@@ -72,21 +72,22 @@
 
 			<p>
 
-				<strong> Devenir photographe était pour moi une évidence. Comme si j’y étais
-					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-					immortels, voilà ce qui me fait vibrer.</strong> <br><br>
+				Devenir <strong>photographe</strong> était pour moi une évidence. Comme si j’y étais
+				prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
+				immortels, voilà ce qui me fait vibrer. <br><br>
 
 
 				Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
 				le
-				figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
+				figer au travers de <strong>photographies</strong> pour le savourer avec les personnes qui sont
+				importantes à nos
 				yeux,
 				ou le partager au plus grand nombre.
 				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
 				approche, ma
 				technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de
 				la
-				tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.
+				tendresse et de lumière à chaque fois que vous poserez les yeux sur vos <strong> photos</strong>.
 			</p>
 		</div>
 	</div>
@@ -117,11 +118,12 @@
 		<div class="quote">
 			<figure>
 				<blockquote>
-					<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
+					<p class="">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
 						fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
-						n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
+						n’existe pas en <strong>photographie</strong>. Toutes les photos sont exactes. Aucune d’elles
+						n’est la
 						vérité.
-					</h1>
+					</p>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
@@ -134,8 +136,7 @@
 				<div class="service__description">
 					<h3>Shooting photo</h3>
 					<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
-						en
-						Île-de-France pour réaliser vos photos</p>
+						en <strong>Île-de-France</strong> pour réaliser vos photos</p>
 				</div>
 				<div class="service__price">
 					<h4>350€/demi journée</h4>
