--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="./assets/css/style.css">
+
+
 	<title>Photographe Nina Carducci à Bordeaux</title>
+
 	<meta name="description"
 		content="Photographe professionnel a votre service, Adresse:68 avenue Alsace-Lorraine,33200 Bordeaux,Tel :05 56 67 78 89, deplacement possible sur Île-de-France" />
-	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+
+	<meta name="robots" content="index, follow, max-image-preview:large,
+	 max-snippet:-1, max-video-preview:-1">
+
+
 </head>
+
 
 <body>
 	<div class="top-header">
@@ -184,11 +192,11 @@
 				<h3>Une question ? Une demande de devis ?</h3>
 				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 				<form method="post">
-					<label>Nom</label>
+					<label for="nom">Nom</label>
 					<input type="text" name="nom" id="nom">
-					<label>Email</label>
+					<label for="email">Email</label>
 					<input type="email" name="email" id="email">
-					<label>Message</label>
+					<label for="message">Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 					<input type="submit" value="Envoyer">
 				</form>
