--- a/index.html
+++ b/index.html
@@ -138,40 +138,40 @@
 		</div>
 	</div>
 	<div id="services">
-		<h1 class="title">Mes services</h1>
+		<h2 class="title">Mes services</h2>
 		<div class="container">
 			<div class="service">
 				<div class="service__description">
-					<h2>Shooting photo</h2>
+					<h3>Shooting photo</h3>
 					<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
 						en <strong>Île-de-France</strong> pour réaliser vos photos</p>
 				</div>
 				<div class="service__price">
-					<h3>350€/demi journée</h3>
+					<h4>350€/demi journée</h4>
 					<span>Matériel, déplacement inclus</span>
 				</div>
 
 			</div>
 			<div class="service">
 				<div class="service__description">
-					<h2>Retouches</h2>
+					<h3>Retouches</h3>
 					<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
 						optimal pour vos publications</p>
 				</div>
 				<div class="service__price">
-					<h3>50€/photo</h3>
+					<h4>50€/photo</h4>
 					<span>2 AR par photo</span>
 				</div>
 			</div>
 			<div class="service">
 				<div class="service__description">
-					<h2>Album photos</h2>
+					<h3>Album photos</h3>
 					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
 						un
 						album photo personnalisé</p>
 				</div>
 				<div class="service__price">
-					<h3>400€ album A4</h3>
+					<h4>400€ album A4</h4>
 					<span>30 pages recto/verso</span>
 				</div>
 			</div>
@@ -206,6 +206,33 @@
 			</div>
 		</div>
 	</div>
+
+	<footer>
+		<h1> Nina Carducci </h1>
+		<div id="contact-adresse">
+			<span> <a
+					href="https://www.google.com/maps/place/68+Av.+Alsace+Lorraine,+33200+Bordeaux/@44.8465743,-0.6065365,17z/data=!3m1!4b1!4m6!3m5!1s0xd54d803d3494ff1:0x775d19897dd6276f!8m2!3d44.8465743!4d-0.6065365!16s%2Fg%2F11c15dhy_v"
+					target="_blank">68 avenue Alsace-Lorraine,33200 Bordeaux</a></span>
+			<span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+					class="bi bi-telephone-forward-fill" viewBox="0 0 16 16">
+					<path fill-rule="evenodd"
+						d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511zm10.761.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708z" />
+				</svg> : 05 56 67 78 89</span>
+
+
+		</div>
+
+		<div id="nous-suivre">
+			<span><a class="social-link" href="" target="_blank"><img src="assets/images/facebook.png"
+						alt="instagram"></a></span>
+			<span><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img
+						src="assets/images/instagram2.png" alt="instagram"></a></span>
+			<span><a class="social-link" href="" target="_blank"><img src="assets/images/twitter.png"
+						alt="instagram"></a></span>
+
+		</div>
+
+	</footer>
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
