--- a/index.html
+++ b/index.html
@@ -138,40 +138,40 @@
 		</div>
 	</div>
 	<div id="services">
-		<h2 class="title">Mes services</h2>
+		<h1 class="title">Mes services</h1>
 		<div class="container">
 			<div class="service">
 				<div class="service__description">
-					<h3>Shooting photo</h3>
+					<h2>Shooting photo</h2>
 					<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
 						en <strong>Île-de-France</strong> pour réaliser vos photos</p>
 				</div>
 				<div class="service__price">
-					<h4>350€/demi journée</h4>
+					<h3>350€/demi journée</h3>
 					<span>Matériel, déplacement inclus</span>
 				</div>
 
 			</div>
 			<div class="service">
 				<div class="service__description">
-					<h3>Retouches</h3>
+					<h2>Retouches</h2>
 					<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
 						optimal pour vos publications</p>
 				</div>
 				<div class="service__price">
-					<h4>50€/photo</h4>
+					<h3>50€/photo</h3>
 					<span>2 AR par photo</span>
 				</div>
 			</div>
 			<div class="service">
 				<div class="service__description">
-					<h3>Album photos</h3>
+					<h2>Album photos</h2>
 					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
 						un
 						album photo personnalisé</p>
 				</div>
 				<div class="service__price">
-					<h4>400€ album A4</h4>
+					<h3>400€ album A4</h3>
 					<span>30 pages recto/verso</span>
 				</div>
 			</div>
@@ -224,15 +224,17 @@
 
 		<div id="nous-suivre">
 			<span><a class="social-link" href="" target="_blank"><img src="assets/images/facebook.png"
-						alt="instagram"></a></span>
+						alt="facebook"></a></span>
 			<span><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img
 						src="assets/images/instagram2.png" alt="instagram"></a></span>
 			<span><a class="social-link" href="" target="_blank"><img src="assets/images/twitter.png"
-						alt="instagram"></a></span>
+						alt="twitter"></a></span>
 
 		</div>
 
 	</footer>
+
+
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
