--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata.jpg" class="d-block w-100" alt="ryoji-iwata">
+					<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="ryoji-iwata">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green.jpg" class="d-block w-100" alt="nicholas-green">
+					<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="nicholas-green">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros.jpg" class="d-block w-100" alt="edward-cisneros">
+					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="edward-cisneros">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -73,7 +73,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.jpg" alt="Nina Carducci">
+			<img src="./assets/images/nina.webp" alt="Nina Carducci">
 		</div>
 		<div id="about-me">
 			<h1 class="about-me__title">À propos </h1>
@@ -104,23 +104,23 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/aaron-paul.jpg" alt="aaron-paul">
+					src="./assets/images/gallery/concerts/aaron-paul.webp" alt="aaron-paul">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/ali-morshedlou.jpg" alt="ali-morshedlou">
+					src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="ali-morshedlou">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/jason-goodman.jpg" alt="jason-goodman">
+					src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="jason-goodman">
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/hannah-busing.jpg" alt="hannah-busing">
+					src="./assets/images/gallery/mariage/hannah-busing.webp" alt="hannah-busing">
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/ade-tunji.jpg" alt="ade-tunji">
+					src="./assets/images/gallery/portraits/ade-tunji.webp" alt="ade-tunji">
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/jakob-owens.jpg" alt="jakob-owens">
+					src="./assets/images/gallery/mariage/jakob-owens.webp" alt="jakob-owens">
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/nino-van-prattenburg.jpg" alt="nino-van-prattenburg">
+					src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" alt="nino-van-prattenburg">
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/austin-neill.jpg" alt="austin-neill">
+					src="./assets/images/gallery/concerts/austin-neill.webp" alt="austin-neill">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/mateus-campos-felipe.jpg" alt="mateus-campos-felipe">
+					src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" alt="mateus-campos-felipe">
 			</div>
 		</div>
 		<div class="quote">
