--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.jpg" alt="camera">
+				<img src="./assets/images/camera.webp" alt="camera">
 			</div>
 		</div>
 	</div>
