--- a/index.html
+++ b/index.html
@@ -210,14 +210,16 @@
 	<footer>
 		<h1> Nina Carducci </h1>
 		<div id="contact-adresse">
-			<span> <a
-					href="https://www.google.com/maps/place/68+Av.+Alsace+Lorraine,+33200+Bordeaux/@44.8465743,-0.6065365,17z/data=!3m1!4b1!4m6!3m5!1s0xd54d803d3494ff1:0x775d19897dd6276f!8m2!3d44.8465743!4d-0.6065365!16s%2Fg%2F11c15dhy_v"
-					target="_blank">68 avenue Alsace-Lorraine,33200 Bordeaux</a></span>
-			<span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-					class="bi bi-telephone-forward-fill" viewBox="0 0 16 16">
-					<path fill-rule="evenodd"
-						d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511zm10.761.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708z" />
-				</svg> : 05 56 67 78 89</span>
+
+			<span> Tel : 05 56 67 78 89</span>
+
+
+
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.771917834112!2d-0.609111423842423!3d44.846578074435186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d803d3494ff1%3A0x775d19897dd6276f!2s68%20Av.%20Alsace%20Lorraine%2C%2033200%20Bordeaux!5e0!3m2!1sfr!2sfr!4v1682881332400!5m2!1sfr!2sfr"
+				width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+				referrerpolicy="no-referrer-when-downgrade"></iframe><br>
+
 
 
 		</div>
