--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 
 
-			<iframe
+			<iframe title="myFrame">
 				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.771917834112!2d-0.609111423842423!3d44.846578074435186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d803d3494ff1%3A0x775d19897dd6276f!2s68%20Av.%20Alsace%20Lorraine%2C%2033200%20Bordeaux!5e0!3m2!1sfr!2sfr!4v1682881332400!5m2!1sfr!2sfr"
 				width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"
 				referrerpolicy="no-referrer-when-downgrade"></iframe><br>
