--- a/index.html
+++ b/index.html
@@ -210,16 +210,9 @@
 	<footer>
 		<h1> Nina Carducci </h1>
 		<div id="contact-adresse">
-
-			<span> Tel : 05 56 67 78 89</span>
-
-
-
-			<iframe title="myFrame">
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.771917834112!2d-0.609111423842423!3d44.846578074435186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d803d3494ff1%3A0x775d19897dd6276f!2s68%20Av.%20Alsace%20Lorraine%2C%2033200%20Bordeaux!5e0!3m2!1sfr!2sfr!4v1682881332400!5m2!1sfr!2sfr"
-				width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"
-				referrerpolicy="no-referrer-when-downgrade"></iframe><br>
-
+			<span> <a href="https://goo.gl/maps/PKWfBa1VbW8mM1tV6" target="_blank">68 avenue Alsace-Lorraine,33200
+					Bordeaux</a></span>
+			<span>Tel : 05 56 67 78 89</span>
 
 
 		</div>
@@ -235,6 +228,43 @@
 	<script src="./assets/js/maugallery.js"></script>
 	<script src="./assets/js/scripts.js"></script>
 
+
+	<script type="application/ld+json">
+		{
+			"@context": "http://schema.org",
+			"@type": ["LocalBusiness", "Service"],
+			"name": "Nina Carducci",
+			"description": "Nina Carducci, photographe professionnelle à Bordeaux",
+			"image": "https://github.com/BuckyBuck135/Projet-5---nina-carducci.github.io/blob/main/assets/images/nina-lossy.webp",
+			"url": "https://nina-carducci-photographe.netlify.app/",
+			"telephone": "0556677889",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+				},
+			"geo": {
+				"@type": "GeoCoordinates",
+				"latitude": "44.8466732",
+				"longitude": "-0.6065805"
+			},
+			"openingHoursSpecification": {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": [
+					"lundi",
+					"mardi",
+					"mercredi",
+					"jeudi",
+					"vendredi"
+				],
+				"opens": "10:00",
+				"closes": "19:00"
+			},
+			"priceRange" : "50€ - 400€"
+		}
+		</script>
 
 </body>
 
