--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 	<footer>
 		<h1> Nina Carducci </h1>
 		<div id="contact-adresse">
-			<span> <a href="https://goo.gl/maps/PKWfBa1VbW8mM1tV6" target="_blank">68 avenue Alsace-Lorraine,33200
-					Bordeaux</a></span>
+			<span> <a href="https://goo.gl/maps/PKWfBa1VbW8mM1tV6" target="_blank">68 avenue
+					Alsace-Lorraine,33200,Bordeaux,France</a></span>
 			<span>Tel : 05 56 67 78 89</span>
 
 
@@ -229,42 +229,7 @@
 	<script src="./assets/js/scripts.js"></script>
 
 
-	<script type="application/ld+json">
-		{
-			"@context": "http://schema.org",
-			"@type": ["LocalBusiness", "Service"],
-			"name": "Nina Carducci",
-			"description": "Nina Carducci, photographe professionnelle à Bordeaux",
-			"image": "https://github.com/BuckyBuck135/Projet-5---nina-carducci.github.io/blob/main/assets/images/nina-lossy.webp",
-			"url": "https://nina-carducci-photographe.netlify.app/",
-			"telephone": "0556677889",
-			"address": {
-				"@type": "PostalAddress",
-				"streetAddress": "68 avenue Alsace-Lorraine",
-				"addressLocality": "Bordeaux",
-				"postalCode": "33200",
-				"addressCountry": "FR"
-				},
-			"geo": {
-				"@type": "GeoCoordinates",
-				"latitude": "44.8466732",
-				"longitude": "-0.6065805"
-			},
-			"openingHoursSpecification": {
-				"@type": "OpeningHoursSpecification",
-				"dayOfWeek": [
-					"lundi",
-					"mardi",
-					"mercredi",
-					"jeudi",
-					"vendredi"
-				],
-				"opens": "10:00",
-				"closes": "19:00"
-			},
-			"priceRange" : "50€ - 400€"
-		}
-		</script>
+
 
 </body>
 
