--- a/index.html
+++ b/index.html
@@ -229,6 +229,24 @@
 	<script src="./assets/js/scripts.js"></script>
 
 
+	<!-- Balisage JSON-LD généré par l'outil d'aide au balisage de données structurées de Google -->
+	<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "LocalBusiness",
+	  "name": "Nina Carducci",
+	  "image": "https://mdslasso.github.io/nina-carducci/assets/images/nina.webp",
+	  "telephone": "05 56 67 78 89",
+	  "address": {
+		"@type": "PostalAddress",
+		"streetAddress": "68 avenue Alsace-Lorraine",
+		"addressLocality": "Bordeaux",
+		"addressCountry": "France",
+		"postalCode": "33200"
+	  }
+	}
+	</script>
+
 
 
 </body>
