--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="ryoji-iwata">
+					<img src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/ryoji-iwata.webp"
+						class="d-block w-100" alt="ryoji-iwata">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="nicholas-green">
+					<img src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/nicholas-green.webp"
+						class="d-block w-100" alt="nicholas-green">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="edward-cisneros">
+					<img src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/edward-cisneros.webp"
+						class="d-block w-100" alt="edward-cisneros">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -73,7 +76,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.webp" alt="Nina Carducci">
+			<img src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/nina.webp" alt="Nina Carducci">
 		</div>
 		<div id="about-me">
 			<h1 class="about-me__title">À propos </h1>
