--- a/index.html
+++ b/index.html
@@ -107,23 +107,32 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/aaron-paul.webp" alt="aaron-paul">
+					src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/aaron-paul.webp"
+					alt="aaron-paul">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="ali-morshedlou">
+					src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/ali-morshedlou.webp"
+					alt="ali-morshedlou">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="jason-goodman">
+					src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/jason-goodman.webp"
+					alt="jason-goodman">
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/hannah-busing.webp" alt="hannah-busing">
+					src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/hannah-busing.webp"
+					alt="hannah-busing">
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/ade-tunji.webp" alt="ade-tunji">
+					src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/ade-tunji.webp"
+					alt="ade-tunji">
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/jakob-owens.webp" alt="jakob-owens">
+					src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/jakob-owens.webp"
+					alt="jakob-owens">
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" alt="nino-van-prattenburg">
+					src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/nino-van-prattenburg.webp"
+					alt="nino-van-prattenburg">
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/austin-neill.webp" alt="austin-neill">
+					src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/austin-neill.webp"
+					alt="austin-neill">
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" alt="mateus-campos-felipe">
+					src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/mateus-campos-felipe.webp"
+					alt="mateus-campos-felipe">
 			</div>
 		</div>
 		<div class="quote">
@@ -205,7 +214,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" alt="camera">
+				<img src="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/camera.webp" alt="camera">
 			</div>
 		</div>
 	</div>
