--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 			<span> <a href="https://goo.gl/maps/PKWfBa1VbW8mM1tV6" target="_blank">68 avenue
 					Alsace-Lorraine, 33200, Bordeaux, France</a></span>
 			<span>Tel : 05 56 67 78 89</span>
+			<span> Ouvert du lundi au vendredi de 10h à 19h</span>
 
 
 		</div>
