--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
 	<link rel="stylesheet" href="./assets/css/style.css">
 
 
+
+
+	<!-- Twitter meta tags  -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Photographe Nina Carducci à Bordeaux">
+	<meta name="twitter:description"
+		content="Photographe professionnel a votre service, Adresse: 68 avenue Alsace-Lorraine, 33200 Bordeaux, Tel :05 56 67 78 89, deplacement possible sur Île-de-France">
+	<meta name="twitter:image" content="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/nina.webp">
+	<meta name="twitter:image:alt" content=" Nina Carducci la photographe">
+
+	<!-- Open Graph (FB) meta tags -->
+	<meta property="og:title" content="Photographe Nina Carducci à Bordeaux">
+	<meta property="og:site_name" content="Photographe Nina Carducci à Bordeaux">
+	<meta property="og:type" content="article">
+	<meta property="og:description"
+		content="Photographe professionnel a votre service, Adresse: 68 avenue Alsace-Lorraine, 33200 Bordeaux, Tel :05 56 67 78 89, deplacement possible sur Île-de-France">
+	<meta property="og:image" content="https://storage.googleapis.com/mdslasso_bucket/Nina%20%20Carducci/nina.webp">
+	<meta property="og:url" content="https://mdslasso.github.io/nina-carducci/">
+
+
 	<title>Photographe Nina Carducci à Bordeaux</title>
 
 	<meta name="description"
@@ -18,6 +38,9 @@
 
 	<meta name="robots" content="index, follow, max-image-preview:large,
 	 max-snippet:-1, max-video-preview:-1">
+
+
+
 
 
 </head>
